--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.ivribalko.flutter_app_template">
    <application
-        android:label="Flutter Template"
+        android:label="Chad"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
