--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   dart_openai: ^1.9.1
   flutter:
     sdk: flutter
+  flutter_dotenv: ^5.0.2
   get: ^4.6.5
   get_storage: ^2.1.1
 
