--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   flutter_dotenv: ^5.0.2
   get: ^4.6.5
   get_storage: ^2.1.1
+  markdown_widget: ^2.1.0
 
 dev_dependencies:
   flutter_lints: ^2.0.1
