--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,8 @@ dependencies:
   get: ^4.6.5
   get_storage: ^2.1.1
   markdown_widget: ^2.1.0
+  material_design_icons_flutter: ^6.0.7096
+  url_launcher: ^6.1.10
 
 dev_dependencies:
   flutter_lints: ^2.0.1
