--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
-name: flutter_app_template
+name: chad
 description: Quick start template
-repository: https://github.com/ivribalko/flutter_app_template
+repository: https://github.com/ivribalko/chad
 
 publish_to: none
 
