--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: chad
-description: Quick start template
+description: OpenAI Chat API UI
 repository: https://github.com/ivribalko/chad
 
 publish_to: none
