--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   get_storage: ^2.1.1
   markdown_widget: ^2.1.0
   material_design_icons_flutter: ^6.0.7096
+  scrollable_positioned_list: ^0.3.5
   url_launcher: ^6.1.10
 
 dev_dependencies:
